Fixed staff grid to remove bad wrapping around photos on mobile.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,19 +33,19 @@
 	.section h3{color:#999; text-transform: uppercase; font-weight: normal; font-size: 1.6em;}
     .section p{line-height: 1.5em;}
 
-	#mission p{font-size: 1.3em; line-height: 1.7em;}
+	#mission p, #followUs p, .section.mapDescription p{font-size: 1.3em; line-height: 1.7em;}
 
 
 	/*Staff styles*/
 	#staff h3{margin-bottom:0; margin-left: 5%;}
 
 	#staff.section{width: 100%; margin: 0; padding: 0;}
-	#staff .member{width: 100%; display: block; margin: 0; padding: 25px 0; border-bottom: solid 1px #CCC; clear:both;}
-	#staff .member .photo{width: 20%; margin: 0 4% 0 5%; float:left; /*border-radius: 10px*/}
+	#staff .member{width: 100%; display: block; margin: 0; padding: 25px 0; border-top: solid 1px #CCC; clear:both;}
+	#staff .member .photo{width: 20%; margin: 0 2% 0 5%; float:left; /*border-radius: 10px*/}
 
 	#staff .member .photo img.square{width: 100%; padding: 0; height: auto;}
 	#staff .member .photo img.rectangle{display: none; width: 100%; padding: 0; height: auto;}
-	#staff .member .profile{padding:0 5%;}
+	#staff .member .profile{padding:0 5% 20px 0; float: right; width: 65%}
 	#staff .member .profile p{margin:0;}
 	#staff .member .profile h4{font-size: 20px; margin: 0;}
 	#staff .member .profile p.biography{/*font-family: serif;*/ margin-top: 10px; line-height: 1.7em;}
@@ -92,6 +92,7 @@
     #footer{background-color: #000; color: #999; width:100%; margin: 0 auto; padding: 20px 0;}
     #footer p{padding: 0 5%;}
 
+    /*
 	@media only screen and (min-width: 500px) {
 		#staff.section{width: 90%; margin: 0 5%; padding: 35px 0 0 0;}
 		#staff .member .profile{padding:0;}
@@ -100,9 +101,22 @@
 		#staff .member{width: 48%; display: inline-block; margin: 0 1.5% 30px 0; padding: 0; vertical-align: top; border-bottom: none;}
 		#staff h3{margin-bottom:30px;}
 	}
+*/
+    @media only screen and (min-width: 500px) {
+        #footer {margin: 20px auto 0 auto; }
+    }
 
-	@media only screen and (min-width: 700px) {
-		body {font-size: 18px;}
+    @media only screen and (min-width: 700px) {
+
+        #staff.section{width: 90%; margin: 0 5%; padding: 35px 0 0 0;}
+        #staff .member .profile{padding:0;}
+        #staff .member .photo{width: 30%; margin: 0 4% 0 0;}
+
+        #staff .member{width: 48%; display: inline-block; margin: 0 1.5% 30px 0; padding: 0; vertical-align: top; border-top: none;}
+        #staff h3{margin-bottom:30px;}
+
+
+        body {font-size: 18px;}
 		#header #centerWidth {text-align: center;}
 		#header #centerWidth #titleBar h1{background:url(../images/logo.png)5px center no-repeat; background-size: 40px 40px;}
 		#header #titleBar {/*float: left; width: 32%;*/padding-top:15px;}
